<resources>
    <string name="app_name">PlaceBook</string>

    <!-- Place Name Field EditText hint for adding a new place in detail screen.-->
    <string name="hint_place_name">Place Name</string>

    <!-- City Name Field EditText hint for adding a new place in detail screen.-->
    <string name="hint_city_name">City Name</string>

    <!-- Country Name Field EditText hint for adding a new place in detail screen.-->
    <string name="hint_country_name">Country Name</string>

    <!-- The comma between city name and country name on main screen and detail screen.-->
    <string name="comma_between_city_and_country">,</string>

    <!-- The fake place name provided for place_list_item.xml for design reason. -->
    <string name="tools_text_place_name">Pastéis de Belém</string>

    <!-- The fake place city provided for place_list_item.xml for design reason. -->
    <string name="tools_text_place_city">Lisbon</string>

    <!-- The fake place country provided for place_list_item.xml for design reason. -->
    <string name="tools_text_place_country">Portugal</string>

    <!-- Category Spinner title in AddandEditorActivity.
     Usedactivity_detail.xml -->
    <string name="category_title">Category:</string>
    <!-- Specialties Field EditText hint for adding a new place in AddandEditorActivity.
    Usedactivity_detail.xml -->
    <string name="hint_specialties">Specialties</string>
    <!-- Reservation EditText title in AddandEditorActivity.
    Usedactivity_detail.xml -->
    <string name="reservation_title">Reservation:</string>
    <!-- Comments Field EditText hint for adding a new place in AddandEditorActivity.
    Usedactivity_detail.xml -->
    <string name="hint_comments">Comments</string>

    <!-- Category Spinner string array in AddandEditorActivity.
     Used in setUpSpinner() in AddandEditorActivity. -->
    <string name="category_spinner_attraction">Attraction</string>
    <string name="category_spinner_cafe">Café</string>
    <string name="category_spinner_restaurant">Restaurant</string>
    <string name="category_spinner_hotel">Hotel</string>
    <string name="category_spinner_shop">Shop</string>
    <string name="category_spinner_other">Other</string>

    <!-- Title of editor page action menu save.
     Used in android:title in menu_editor.xml -->
    <string name="editor_menu_save">Save</string>
    <!-- Title of editor page action menu delete.
    Used in android:title in menu_editor.xml -->
    <string name="editor_menu_delete">Delete</string>

</resources>
