<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Place Name field -->
    <EditText
        android:id="@+id/et_place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_place_name"
        android:padding="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:textAppearanceMedium" />

    <!-- Country Name field -->
    <EditText
        android:id="@+id/et_place_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_country_name"
        android:padding="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:textAppearanceMedium" />

    <!-- Category field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/category_title"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:spinnerMode="dropdown"
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

    <!-- Specialties field -->
    <EditText
        android:id="@+id/et_specialties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_specialties"
        android:padding="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:textAppearanceMedium" />

    <!-- Reservation field -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/reservation_title"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorAccent" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <!-- Comments field -->
    <EditText
        android:id="@+id/et_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_comments"
        android:padding="@dimen/activity_horizontal_margin"
        android:textAppearance="?android:textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/iv_facebook_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/facebook_icon" />

        <ImageView
            android:id="@+id/iv_website_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/website_icon" />

        <ImageView
            android:id="@+id/iv_location_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/location_icon" />

    </LinearLayout>

</LinearLayout>